commit inicio introducao

--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 </head>
 
 <body>
+  <header class="header-bg">
+    <div class="header container">
+      <a href="./"> <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> </a>
+      <nav aria-label="primaria">
+        <ul class="header-menu cor-0">
+          <li>
+            <a href="./bicicletas.html">Bicicletas</a>
+          </li>
+          <li>
+            <a href="./seguros.html">Seguros</a>
+          </li>
+          <li>
+            <a href="./contato.html">Contato</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="introducao-bg">
+    <div class="introducao container">
+      <div class="introducao-conteudo">
+        <h1 class="introducao titulo">Bicicletas feitas sob medida<span class="detalhe-ponto">.</span></h1>
+        <p class="introducao texto">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao" href="./bicicletas.html">selecione a sua</a>
+      </div>
+    </div>
+
+  </main>
+
+
 </body>
 
 </html>
