--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -73,7 +73,7 @@
       </li>
     </ul>
   </article>
-  <section aria-label="tecnologia" class="tecnologia-bg">
+  <article aria-label="tecnologia" class="tecnologia-bg">
     <div class="tecnologia container">
       <div class="tecnologia-conteudo">
         <span class="font-2-l-b cor-5">tecnologia avançada</span>
@@ -95,7 +95,98 @@
       </div>
       <div class="tecnologia-imagem"><img src="./img/fotos/tecnologia.jpg" alt=""></div>
     </div>
+  </article>
+  <section class="parceiros container" aria-label="Nossos Parceiros">
+    <h2 class="font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
+    <ul class="parceiros-lista">
+      <li> <img src="./img/parceiros/caravan.svg" alt="caravan"></li>
+      <li> <img src="./img/parceiros/ranek.svg" alt="ranek"></li>
+      <li> <img src="./img/parceiros/handel.svg" alt="handel"></li>
+      <li> <img src="./img/parceiros/dogs.svg" alt="dogs"></li>
+      <li> <img src="./img/parceiros/lescone.svg" alt="lescone"></li>
+      <li> <img src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
+      <li> <img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+      <li> <img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
+
+    </ul>
+
   </section>
+  <section class="depoimento" aria-label="depoimento">
+    <div><img src="./img/fotos/depoimento.jpg" alt="pessoa pedalando uma bicicleta bikcraft"></div>
+    <div class="depoimento-conteudo">
+      <blockquote>
+        <p class="font-1-xl cor-p5">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+        <span class="font-1-m-b cor-p4">Ana Júlia</span>
+      </blockquote>
+    </div>
+  </section>
+  <article class="seguros-bg">
+    <div class="seguros container">
+      <h2 class="font-1-xxl cor-0">Seguros<span class="cor-p1">.</span></h2>
+
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-6">PRATA</h3>
+        <span class="font-1-xl cor-0">R$199 <span class="font-1-xs cor-6">mensal</span> </span>
+        <ul class="cor-0 font-2-m">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="botao secundario" href="./orcamento.html">inscreva-se</a>
+      </div>
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-p1">OURO</h3>
+        <span class="font-1-xl cor-0">R$299 <span class="font-1-xs cor-6">mensal</span> </span>
+        <ul class="cor-0 font-2-m">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a class="botao" href="./orcamento.html">inscreva-se</a>
+      </div>
+    </div>
+  </article>
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <div class="footer-contato">
+        <h3 class=" font-2-l-b cor-0">CONTATO</h3>
+        <ul class="font-2-m cor-5">
+          <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
+          <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+          </li>
+          <li>
+            Rua Ali perto,42 - Botafogo
+          </li>
+          <li>
+            Rio de Janeiro - RJ
+          </li>
+        </ul>
+        <div class="footer-redes">
+          <a href="./"><img src="./img/redes/instagram.svg" alt="instagram"></a>
+          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube.svg" alt="youtube"></a>
+        </div>
+      </div>
+
+      <div class="footer-informacoes">
+        <h3 class="font-2-l-b cor-0">INFORMAÇÕES</h3>
+        <nav>
+          <ul class="font-1-m cor-5">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
