paginas separadas pra cada bicicleta, pagina de seguros e inicio da pagina de contato

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
       <a href="./"> <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> </a>
@@ -75,7 +75,7 @@
         </div>
         <div class="bicicletas-conteudo">
           <h2 class="font-1-xl cor-0">Magic Might</h2>
-          <p class="font-2-s cor-5">A magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+          <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-5">
             <li>
               <img src="./img/icones/eletrica.svg" alt="">Motor Elétrico
@@ -90,7 +90,7 @@
               <img src="./img/icones/rastreador.svg" alt="">Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
+          <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
         </div>
       </div>
     </div>
@@ -117,7 +117,7 @@
             <img src="./img/icones/rastreador.svg" alt="">Rastreador
           </li>
         </ul>
-        <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
+        <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
       </div>
   </main>
   <footer class="footer-bg">
