--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body id="principal">
   <header class="header-bg">
     <div class="header container">
       <a href="./"> <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> </a>
@@ -122,7 +122,7 @@
   </section>
   <article class="seguros-bg">
     <div class="seguros container">
-      <h2 class="font-1-xxl cor-0">Seguros<span class="cor-p1">.</span></h2>
+      <h2 class="font-1-xxl cor-0">seguros<span class="cor-p1">.</span></h2>
 
       <div class="seguros-item">
         <h3 class="font-1-xl cor-6">PRATA</h3>
