pagina de orçamentos e otimizações

--- a/termos.html
+++ b/termos.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="./favicon.svg">
 
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.css" as="style">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,7 +61,7 @@
   </main>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="bikcraft">
       <div class="footer-contato">
         <h3 class=" font-2-l-b cor-0">CONTATO</h3>
         <ul class="font-2-m cor-5">
@@ -75,9 +76,9 @@
           </li>
         </ul>
         <div class="footer-redes">
-          <a href="./"><img src="./img/redes/instagram.svg" alt="instagram"></a>
-          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"><img src="./img/redes/youtube.svg" alt="youtube"></a>
+          <a href="./"><img src="./img/redes/instagram.svg" width="32" height="32" alt="instagram"></a>
+          <a href="./"><img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube.svg" width="32" height="32" alt="youtube"></a>
         </div>
       </div>
 
