--- a/bicicletas.html
+++ b/bicicletas.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="./favicon.svg">
 
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.css" as="style">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,16 +53,16 @@
         <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
-            <img src="./img/icones/eletrica.svg" alt="">Motor Elétrico
+            <img src="./img/icones/eletrica.svg" width="24" height="24" alt="">Motor Elétrico
           </li>
           <li>
-            <img src="./img/icones/carbono.svg" alt="">Fibra de Carbono
+            <img src="./img/icones/carbono.svg" width="24" height="24" alt="">Fibra de Carbono
           </li>
           <li>
-            <img src="./img/icones/velocidade.svg" alt="">50 km/h
+            <img src="./img/icones/velocidade.svg" width="24" height="24" alt="">50 km/h
           </li>
           <li>
-            <img src="./img/icones/rastreador.svg" alt="">Rastreador
+            <img src="./img/icones/rastreador.svg" width="24" height="24" alt="">Rastreador
           </li>
         </ul>
         <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
@@ -70,7 +71,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/magic.jpg" alt="bicicleta preta">
+          <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="bicicleta preta">
           <span class="font-2-m cor-0">R$ 2499</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -78,16 +79,16 @@
           <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-5">
             <li>
-              <img src="./img/icones/eletrica.svg" alt="">Motor Elétrico
+              <img src="./img/icones/eletrica.svg" width="24" height="24" alt="">Motor Elétrico
             </li>
             <li>
-              <img src="./img/icones/carbono.svg" alt="">Fibra de Carbono
+              <img src="./img/icones/carbono.svg" width="24" height="24" alt="">Fibra de Carbono
             </li>
             <li>
-              <img src="./img/icones/velocidade.svg" alt="">45 km/h
+              <img src="./img/icones/velocidade.svg" width="24" height="24" alt="">45 km/h
             </li>
             <li>
-              <img src="./img/icones/rastreador.svg" alt="">Rastreador
+              <img src="./img/icones/rastreador.svg" width="24" height="24" alt="">Rastreador
             </li>
           </ul>
           <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
@@ -97,7 +98,7 @@
 
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nebula.jpg" alt="bicicleta branca">
+        <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="bicicleta branca">
         <span class="font-2-m cor-0">R$ 3999</span>
       </div>
       <div class="bicicletas-conteudo">
@@ -105,16 +106,16 @@
         <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
-            <img src="./img/icones/eletrica.svg" alt="">Motor Elétrico
+            <img src="./img/icones/eletrica.svg" width="24" height="24" alt="">Motor Elétrico
           </li>
           <li>
-            <img src="./img/icones/carbono.svg" alt="">Fibra de Carbono
+            <img src="./img/icones/carbono.svg" width="24" height="24" alt="">Fibra de Carbono
           </li>
           <li>
-            <img src="./img/icones/velocidade.svg" alt="">50 km/h
+            <img src="./img/icones/velocidade.svg" width="24" height="24" alt="">45 km/h
           </li>
           <li>
-            <img src="./img/icones/rastreador.svg" alt="">Rastreador
+            <img src="./img/icones/rastreador.svg" width="24" height="24" alt="">Rastreador
           </li>
         </ul>
         <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
@@ -122,7 +123,7 @@
   </main>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="bikcraft">
       <div class="footer-contato">
         <h3 class=" font-2-l-b cor-0">CONTATO</h3>
         <ul class="font-2-m cor-5">
@@ -137,9 +138,9 @@
           </li>
         </ul>
         <div class="footer-redes">
-          <a href="./"><img src="./img/redes/instagram.svg" alt="instagram"></a>
-          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"><img src="./img/redes/youtube.svg" alt="youtube"></a>
+          <a href="./"><img src="./img/redes/instagram.svg" width="32" height="32" alt="instagram"></a>
+          <a href="./"><img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube.svg" width="32" height="32" alt="youtube"></a>
         </div>
       </div>
 
