--- a/contato.html
+++ b/contato.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="./favicon.svg">
 
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.css" as="style">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,9 +57,9 @@
           <a href="tel:+552199999999">+55 21 9999-9999</a>
         </address>
         <div class="contato-redes">
-          <a href="./"><img src="./img/redes/instagram-p.svg" alt="instagram"></a>
-          <a href="./"><img src="./img/redes/facebook-p.svg" alt="Facebook"></a>
-          <a href="./"><img src="./img/redes/youtube-p.svg" alt="youtube"></a>
+          <a href="./"><img src="./img/redes/instagram-p.svg" width="32" height="32" alt="instagram"></a>
+          <a href="./"><img src="./img/redes/facebook-p.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube-p.svg" width="32" height="32" alt="youtube"></a>
         </div>
       </section>
       <section class="contato-formulario" aria-label="formulário">
@@ -84,40 +85,40 @@
   <article class="lojas container">
     <h1 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h1>
     <div class="lojas-item">
-      <img src="./img/lojas/rj.jpg" alt="">
+      <img src="./img/lojas/rj.jpg" width="1120" height="520" alt="">
       <div class="lojas-conteudo">
         <h2 class="font-2-xl">Rio de Janeiro</h2>
-        <div class="lojas-dados font-2-s">
+        <div class="lojas-dados font-2-s cor-8">
           <p>Rua Ali Perto, 25</p>
           <p>Rio de Janeiro, RJ</p>
         </div>
-        <div class="lojas-dados font-2-s">
+        <div class="lojas-dados font-2-s cor-8">
           <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
           <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
         </div>
-        <p class="lojas-tempo font-1-s"> <img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        <p class="lojas-tempo font-1-s"> <img src="./img/icones/horario.svg" width="20" height="20" alt=""> 08-18h de seg à dom</p>
       </div>
     </div>
     <div class="lojas-item">
-      <img src="./img/lojas/sp.jpg" alt="">
+      <img src="./img/lojas/sp.jpg" width="1120" height="520" alt="">
       <div class="lojas-conteudo">
         <h2 class="font-2-xl">São Paulo</h2>
-        <div class="lojas-dados font-2-s">
+        <div class="lojas-dados font-2-s cor-8">
           <p>Rua Ali Perto, 25</p>
           <p>São Paulo, SP</p>
         </div>
-        <div class="lojas-dados font-2-s">
+        <div class="lojas-dados font-2-s cor-8">
           <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
           <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
         </div>
-        <p class="lojas-tempo font-1-s"> <img src="./img/icones/horario.svg" alt="">
+        <p class="lojas-tempo font-1-s"> <img src="./img/icones/horario.svg" width="20" height="20" alt="">
           08-18h de seg à dom</p>
       </div>
     </div>
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="bikcraft">
       <div class="footer-contato">
         <h3 class=" font-2-l-b cor-0">CONTATO</h3>
         <ul class="font-2-m cor-5">
@@ -132,9 +133,9 @@
           </li>
         </ul>
         <div class="footer-redes">
-          <a href="./"><img src="./img/redes/instagram.svg" alt="instagram"></a>
-          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"><img src="./img/redes/youtube.svg" alt="youtube"></a>
+          <a href="./"><img src="./img/redes/instagram.svg" width="32" height="32" alt="instagram"></a>
+          <a href="./"><img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube.svg" width="32" height="32" alt="youtube"></a>
         </div>
       </div>
 
