--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="./favicon.svg">
 
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.css" as="style">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,10 +43,11 @@
         <p class="introducao font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao introducao" href="./bicicletas.html">selecione a sua</a>
       </div>
-      <div class="introducao-imagem">
-        <img src="./img/fotos/introducao.jpg" alt="bicicleta elétrica preta">
-        <div>
-        </div>
+      <picture>
+        <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
+        <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="bicicleta elétrica preta">
+      </picture>
+    </div>
   </main>
   <article class="bicicletas-lista">
     <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
@@ -82,7 +84,7 @@
         <a href="./bicicletas.html" class="link">escolha um modelo</a>
         <div class="tecnologia-vantagens">
           <div>
-            <img src="./img/icones/eletrica.svg" alt="">
+            <img src="./img/icones/eletrica.svg" width="24" height="24" alt="">
             <h3 class="font-1-m cor-0">Motor Elétrico</h3>
             <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
           </div>
@@ -93,26 +95,26 @@
           </div>
         </div>
       </div>
-      <div class="tecnologia-imagem"><img src="./img/fotos/tecnologia.jpg" alt=""></div>
+      <picture class="tecnologia-imagem"><img src="./img/fotos/tecnologia.jpg" alt=""></picture>
     </div>
   </article>
   <section class="parceiros container" aria-label="Nossos Parceiros">
     <h2 class="font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
     <ul class="parceiros-lista">
-      <li> <img src="./img/parceiros/caravan.svg" alt="caravan"></li>
-      <li> <img src="./img/parceiros/ranek.svg" alt="ranek"></li>
-      <li> <img src="./img/parceiros/handel.svg" alt="handel"></li>
-      <li> <img src="./img/parceiros/dogs.svg" alt="dogs"></li>
-      <li> <img src="./img/parceiros/lescone.svg" alt="lescone"></li>
-      <li> <img src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
-      <li> <img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
-      <li> <img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
+      <li> <img src="./img/parceiros/caravan.svg" width="140" height="38" alt="caravan"></li>
+      <li> <img src="./img/parceiros/ranek.svg" width="140" height="38" alt="ranek"></li>
+      <li> <img src="./img/parceiros/handel.svg" width="140" height="38" alt="handel"></li>
+      <li> <img src="./img/parceiros/dogs.svg" width="140" height="38" alt="dogs"></li>
+      <li> <img src="./img/parceiros/lescone.svg" width="140" height="38" alt="lescone"></li>
+      <li> <img src="./img/parceiros/flexblog.svg" width="140" height="38" alt="flexblog"></li>
+      <li> <img src="./img/parceiros/wildbeast.svg" width="140" height="38" alt="wildbeast"></li>
+      <li> <img src="./img/parceiros/surfbot.svg" width="140" height="38" alt="surfbot"></li>
 
     </ul>
 
   </section>
   <section class="depoimento" aria-label="depoimento">
-    <div><img src="./img/fotos/depoimento.jpg" alt="pessoa pedalando uma bicicleta bikcraft"></div>
+    <div><img src="./img/fotos/depoimento.jpg" width="1560" height="1360" alt="pessoa pedalando uma bicicleta bikcraft"></div>
     <div class="depoimento-conteudo">
       <blockquote>
         <p class="font-1-xl cor-p5">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
@@ -152,7 +154,7 @@
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="bikcraft">
       <div class="footer-contato">
         <h3 class=" font-2-l-b cor-0">CONTATO</h3>
         <ul class="font-2-m cor-5">
@@ -167,9 +169,9 @@
           </li>
         </ul>
         <div class="footer-redes">
-          <a href="./"><img src="./img/redes/instagram.svg" alt="instagram"></a>
-          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"><img src="./img/redes/youtube.svg" alt="youtube"></a>
+          <a href="./"><img src="./img/redes/instagram.svg" width="32" height="32" alt="instagram"></a>
+          <a href="./"><img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube.svg" width="32" height="32" alt="youtube"></a>
         </div>
       </div>
 
