--- a/seguros.html
+++ b/seguros.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="./favicon.svg">
 
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.css" as="style">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +52,7 @@
             <li>Suporte 08h às 18h</li>
             <li>Cobertura estadual</li>
           </ul>
-          <a class="botao secundario" href="./orcamento.html">inscreva-se</a>
+          <a class="botao secundario" href="./orcamentos.html">inscreva-se</a>
         </div>
         <div class="seguros-item">
           <h3 class="font-1-xl cor-p1">OURO</h3>
@@ -64,7 +65,7 @@
             <li>Desconto em parceiros</li>
             <li>Acesso ao Clube Bikcraft</li>
           </ul>
-          <a class="botao" href="./orcamento.html">inscreva-se</a>
+          <a class="botao" href="./orcamentos.html">inscreva-se</a>
         </div>
       </div>
   </main>
@@ -73,32 +74,32 @@
       <h2 class="font-1-xxl cor-0">nossas vantagens<span class="cor-p1">.</span></h2>
       <ul class="font-2-s cor-5">
         <li>
-          <img src="./img/icones/eletrica.svg" alt="">
+          <img src="./img/icones/eletrica.svg" width="32" height="32" alt="">
           <h3 class="cor-0 font-1-l">Reparo elétrico</h3>
           <p>Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
         </li>
         <li>
-          <img src="./img/icones/carbono.svg" alt="">
+          <img src="./img/icones/carbono.svg" width="32" height="32" alt="">
           <h3 class="cor-0 font-1-l">Carbono</h3>
           <p>Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
         </li>
         <li>
-          <img src="./img/icones/sustentavel.svg" alt="">
+          <img src="./img/icones/sustentavel.svg" width="32" height="32" alt="">
           <h3 class="cor-0 font-1-l">Sustentável</h3>
           <p>Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
         </li>
         <li>
-          <img src="./img/icones/rastreador.svg" alt="">
+          <img src="./img/icones/rastreador.svg" width="32" height="32" alt="">
           <h3 class="cor-0 font-1-l">Rastreador</h3>
           <p>Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.</p>
         </li>
         <li>
-          <img src="./img/icones/seguro.svg" alt="">
+          <img src="./img/icones/seguro.svg" width="32" height="32" alt="">
           <h3 class="cor-0 font-1-l">Segurança</h3>
           <p>Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em casos de roubo.</p>
         </li>
         <li>
-          <img src="./img/icones/velocidade.svg" alt="">
+          <img src="./img/icones/velocidade.svg" width="32" height="32" alt="">
           <h3 class="cor-0 font-1-l">Rapidez</h3>
           <p>A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
@@ -136,7 +137,7 @@
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="bikcraft">
       <div class="footer-contato">
         <h3 class=" font-2-l-b cor-0">CONTATO</h3>
         <ul class="font-2-m cor-5">
@@ -151,9 +152,9 @@
           </li>
         </ul>
         <div class="footer-redes">
-          <a href="./"><img src="./img/redes/instagram.svg" alt="instagram"></a>
-          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"><img src="./img/redes/youtube.svg" alt="youtube"></a>
+          <a href="./"><img src="./img/redes/instagram.svg" width="32" height="32" alt="instagram"></a>
+          <a href="./"><img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube.svg" width="32" height="32" alt="youtube"></a>
         </div>
       </div>
 
