--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -49,7 +49,7 @@
         </div>
         <div class="bicicleta-conteudo">
           <p class="cor-5 font-2-l">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <div class="bicicleta-comprar"> <a class='botao' href="../orcamentos.html">Comprar Agora</a>
+          <div class="bicicleta-comprar"> <a class='botao' href="../orcamentos.html?tipo=bikcraft&produto=nebula">Comprar Agora</a>
             <span class="font-1-xs cor-6"> <img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias </span>
             <span class="font-1-xs cor-6"> <img src="../img/icones/estoque.svg" alt=""> 18 em estoque </span>
           </div>
@@ -169,4 +169,5 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="../js/script.js"></script>
 </body>
