--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   <main class="introducao-bg">
     <div class="introducao container">
       <div class="introducao-conteudo">
-        <h1 class="introducao font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-        <p class="introducao font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="botao introducao" href="./bicicletas.html">selecione a sua</a>
+        <h1 data-anime="100" class="introducao font-1-xxl cor-0 fadeInDown">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <p data-anime="300" class="introducao font-2-l cor-5 fadeInDown">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a data-anime="500" class="botao introducao fadeInDown" href="./bicicletas.html">selecione a sua</a>
       </div>
-      <picture>
+      <picture data-anime="700" class="fadeInDown">
         <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
         <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="bicicleta elétrica preta">
       </picture>
@@ -189,6 +189,9 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/plugins/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
+
 </body>
 
 </html>
