--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -9,11 +9,12 @@
   <title>Magic Might | Bikcraft</title>
   <link rel="icon" type="image/x-icon" href="../favicon.svg">
 
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body id="bicicleta">
@@ -49,7 +50,7 @@
         </div>
         <div class="bicicleta-conteudo">
           <p class="cor-5 font-2-l">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <div class="bicicleta-comprar"> <a class='botao' href="../orcamentos.htmltipo=bikcraft&produto=magic">Comprar Agora</a>
+          <div class="bicicleta-comprar"> <a class='botao' href="../orcamentos.html?tipo=bikcraft&produto=magic">Comprar Agora</a>
             <span class="font-1-xs cor-6"> <img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias </span>
             <span class="font-1-xs cor-6"> <img src="../img/icones/estoque.svg" alt=""> 18 em estoque </span>
           </div>
