--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body id="principal">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"> <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> </a>
+      <a href="./"> <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> </a>
       <nav aria-label="primaria">
         <ul class="header-menu cor-0 font-1-m">
           <li>
