--- a/orcamentos.html
+++ b/orcamentos.html
@@ -21,7 +21,7 @@
 <body id="orcamento">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"> <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> </a>
+      <a href="./"> <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> </a>
       <nav aria-label="primaria">
         <ul class="header-menu cor-0 font-1-m">
           <li>
@@ -158,7 +158,7 @@
   </main>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" width="136" height="32" alt="bikcraft">
+      <img src="../img/bikcraft.svg" width="136" height="32" alt="bikcraft">
       <div class="footer-contato">
         <h3 class=" font-2-l-b cor-0">CONTATO</h3>
         <ul class="font-2-m cor-5">
