--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <li>Suporte 08h às 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a class="botao secundario" href="./orcamento.html">inscreva-se</a>
+        <a class="botao secundario" href="./orcamentos.html">inscreva-se</a>
       </div>
       <div class="seguros-item">
         <h3 class="font-1-xl cor-p1">OURO</h3>
@@ -151,7 +151,7 @@
           <li>Desconto em parceiros</li>
           <li>Acesso ao Clube Bikcraft</li>
         </ul>
-        <a class="botao" href="./orcamento.html">inscreva-se</a>
+        <a class="botao" href="./orcamentos.html">inscreva-se</a>
       </div>
     </div>
   </article>
