--- a/bicicletas.html
+++ b/bicicletas.html
@@ -124,7 +124,7 @@
   </main>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="../img/bikcraft.svg" width="136" height="32" alt="bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="bikcraft">
       <div class="footer-contato">
         <h3 class=" font-2-l-b cor-0">CONTATO</h3>
         <ul class="font-2-m cor-5">
