--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -134,7 +134,7 @@
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src=".../img/bikcraft.svg" alt="bikcraft">
+      <img src="../img/bikcraft.svg" alt="bikcraft">
       <div class="footer-contato">
         <h3 class=" font-2-l-b cor-0">CONTATO</h3>
         <ul class="font-2-m cor-5">
