--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="../img/bikcraft.svg" width="136" height="32" alt="bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="bikcraft">
       <div class="footer-contato">
         <h3 class=" font-2-l-b cor-0">CONTATO</h3>
         <ul class="font-2-m cor-5">
