--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -20,7 +20,7 @@
 <body id="bicicleta">
   <header class="header-bg">
     <div class="header container">
-      <a href="../"> <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> </a>
+      <a href="../"> <img src="../img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> </a>
       <nav aria-label="primaria">
         <ul class="header-menu cor-0 font-1-m">
           <li>
